--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0px;
+  padding: 0px;
+  /* outline: 1px solid yellow; */
+  background-color: var(--background-color);
+  min-height: 100dvh;
+}
+#root{
 }
