--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -35,3 +35,8 @@
 .inputForm + button:hover{
     box-shadow: 0px 0px 4px 4px var(--accent);
 }
+
+.prompt {
+    padding-inline: 1em;
+    transition: transform 0.5s ease;
+}
