--- a/src/Components/Admin/Admin.module.css
+++ b/src/Components/Admin/Admin.module.css
@@ -22,6 +22,10 @@
     /* transform: translateX(0vw); */
 }
 
+.adminMenu a:hover{
+    box-shadow: 0px 0px 4px 4px var(--accent);
+}
+
 /* .adminMenu > a:nth-child(2){
     animation: load 2s ease-in 0ms;
 }
